# mangeshrautarchive

./: .dockerignore  .env.example  .flake8  .gitignore  .prettierignore  .reactreviewrc.json  .stylelintignore  .stylelintrc.json  .vercel-redeploy  .vercel-redeploy-1760454430  .vercelignore  ACTUAL_ISSUE.md  AGENTS.md  ALL_FIXES_COMPLETE.md  API_KEYS_SETUP.md  APPLE_INTELLIGENCE_UPGRADE.md  BACKEND_TEST_REPORT.md  CHATBOT_FIXES_COMPLETE.md  CHATBOT_FIX_APPLIED.md  CHATBOT_FRONTEND_IMPROVEMENTS.md  CHATBOT_MODULE_COMPLETE.md  CHATBOT_READY.md  CHATBOT_TEST_OUTPUT.txt  CHATBOT_TEST_REPORT.md  CHATBOT_UI_SUCCESS.md  CHATBOT_UPDATE_COMPLETE.md  CHATBOT_UPGRADE.md  CLICK_HERE_TO_SEE_CHANGES.md  CNAME  COINBASE_SETUP.md  COMPLETE_DEPLOYMENT_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  CONTACT_FORM_FIXED.md  CURRENT_STATUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_CHECK.md  DEPLOYMENT_SUCCESS.md  (+119 more)
.agents/: skills-lock.json
.foglamp/: scan.json
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.playwright-mcp/: page-2026-04-02T08-06-40-671Z.yml  page-2026-04-02T08-07-41-592Z.yml  page-2026-04-02T08-09-39-862Z.yml  page-2026-04-02T08-11-28-569Z.yml  page-2026-04-02T08-13-10-203Z.yml  page-2026-04-04T07-58-41-002Z.yml  page-2026-04-04T08-01-42-125Z.yml  page-2026-04-04T08-04-12-249Z.yml  page-2026-04-04T09-48-42-891Z.yml  page-2026-04-04T09-48-47-035Z.yml  page-2026-04-04T09-50-12-554Z.yml  page-2026-04-04T09-50-19-902Z.yml  (+9 more)
api-monitor/: .env.example  (+7 more)
(+661 files in other folders)
