[project]
name = "app"
version = "0.1.0"
dependencies = [
  "aiofiles==25.1.0",
  "cryptography==49.0.0",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "psutil==7.2.2",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "uvicorn==0.51.0",
  "websockets==16.1",
]
requires-python = "~=3.12.0"

# Ruff mirrors .flake8 policy (see ruff.toml for CLI defaults; values kept in both for tool parity)
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".git", "__pycache__", "old", "build", "dist", ".venv", "venv", "node_modules"]

[tool.ruff.lint]
ignore = ["E203", "E402", "E501", "W291", "W293"]

[tool.pytest.ini_options]
testpaths = ["tests/api"]
python_files = ["test_*.py"]
addopts = "-q"
